--- a/word-chain/word-chain.cabal
+++ b/word-chain/word-chain.cabal
@@ -15,7 +15,7 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:     WordChain
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
 
@@ -33,6 +33,7 @@ test-suite word-chain-test
   main-is:             Spec.hs
   build-depends:       base
                      , word-chain
+                     , hspec
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
